<resources>
    <string name="app_name">天天账本</string>
    <string name="main_title">天天账本</string>
    <string name="outcome">支出</string>
    <string name="income">收入</string>
    <string name="category">分类</string>
    <string name="remark">备注</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="enter">记一笔</string>
    <string name="backspace">退格</string>
    <string name="hide_keyboard">隐藏键盘</string>
    <string name="category_icon">category_icon</string>
    <string name="ledger_detail">账单详情</string>
    <string name="total_income">累计收入：</string>
    <string name="total_outcome">累计支出：</string>
    <string name="current_balance">当前结余：</string>
    <string name="delete">删除</string>
    <string name="remark_title">备注：</string>
</resources>